# Feebas

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md
DFEEBAS_BUILD_SERVER=OFF/: CMakeCache.txt
build-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  feebas-test-tests_particle_tests_test01_cpp  feebas-test-tests_word_tests_test01_cpp  feebas-test-tests_world_tests_test01_cpp  feebas-test-tests_world_tests_test02_cpp  feebas-test-tests_world_tests_test03_cpp  feebas-tests
build-tests/Testing/Temporary/: CTestCostData.txt
build_tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: clean-local.cmake
frontend/: app.js  index.html  styles.css
src/: main.cpp  particles.cpp  particles.hpp  world.cpp  world.hpp  world_cell_change.hpp  world_changes_to_json_visitor.cpp  world_changes_to_json_visitor.hpp  world_to_json_visitor.cpp  world_to_json_visitor.hpp  world_visitor.hpp
tests/particle_tests/: test01.cpp  test02.cpp  test03.cpp  test04.cpp  test05.cpp  test06.cpp  test07.cpp  test08.cpp  test09.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test20.cpp  test21.cpp  test22.cpp  test23.cpp  test24.cpp  test25.cpp  test26.cpp  test27.cpp  test28.cpp  test29.cpp  test30.cpp  test31.cpp  test32.cpp  test33.cpp  test34.cpp  test35.cpp  test36.cpp  test37.cpp  test38.cpp  test39.cpp  test40.cpp
tests/world_tests/: test01.cpp  test02.cpp  test03.cpp  test04.cpp  test05.cpp  test06.cpp  test08.cpp  test09.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp
